package ajour.core;

public interface TrackerListener {

    void trackerChanged(Tracker tracker);

}
